copy in Bootstrap example's assets locally, move my code into Bootstrap template. Map not showing but extent is correct?

--- a/css/cover.css
+++ b/css/cover.css
@@ -28,7 +28,7 @@ html,
 body {
   height: 100%;
   /*background-color: ;*/
-  background: url("/Users/mnorelli/Dropbox/Screenshots/Screenshot 2016-05-17 14.51.18.png") #333;
+  /*background: url("/Users/mnorelli/Dropbox/Screenshots/Screenshot 2016-05-17 14.51.18.png") #333;*/
 }
 body {
   color: #111;
