--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,24 @@
 body {
   font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  padding: 0;
 }
-
+#map { 
+  position:absolute; top:0; bottom:0; width:100%; 
+}
+.my-fluid-container .mapboxgl-map {
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+form {
+  position: absolute;
+  z-index: 1;
+  top: 600px;
+  left: 500px;
+  border-radius: 3px;
+  width: 280px;
+  border: 1px solid rgba(0,0,0,0.4);
+  font-family: 'Open Sans', sans-serif;
+}
